cmake_minimum_required(VERSION 3.16)
project(Kablam VERSION 1.0.0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED YES)
set(CMAKE_CXX_EXTENSIONS OFF)

if (UNIX AND NOT APPLE)
    set(LINUX TRUE)
endif()

set (APP_FULL_NAME "Kablam")
string(TIMESTAMP COPYRIGHT_YEAR "%Y")

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(sdl2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2_TTF REQUIRED SDL2_TTF)
PKG_SEARCH_MODULE(SDL2_IMAGE REQUIRED SDL2_IMAGE)
PKG_SEARCH_MODULE(SDL2_MIXER REQUIRED SDL2_MIXER)

add_executable(Kablam "")

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2_TTF_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIRS} ${SDL2_MIXER_INCLUDE_DIRS})

target_sources(Kablam
    PRIVATE
        ./FPSLimiter.cpp
        ./Assets.cpp
        ./Menu.cpp
        ./Game.cpp
        ./Main.cpp
)

target_link_libraries(Kablam PRIVATE ${SDL2_LIBRARIES} ${SDL2_TTF_LIBRARIES} ${SDL2_IMAGE_LIBRARIES} ${SDL2_MIXER_LIBRARIES})

file(COPY assets/ DESTINATION assets/)
